<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background_black"
    tools:context=".ui.game.ResultFragment">

    <TextView
        android:id="@+id/resultsTextResultsFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/text_results"
        android:textColor="@color/vanilla_white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07" />

    <TextView
        android:id="@+id/totalQuestionsResultsFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/placeholder_total_questions"
        android:textColor="@color/vanilla_white"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultsTextResultsFrag"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/wrongAnswersResultsFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/placeholder_wrong_answers"
        android:textColor="@color/vanilla_white"
        android:textSize="29sp"
        app:layout_constraintBottom_toTopOf="@+id/rightAnswersResultsFrag"
        app:layout_constraintStart_toStartOf="@+id/rightAnswersResultsFrag"
        app:layout_constraintTop_toBottomOf="@+id/totalQuestionsResultsFrag"
        app:layout_constraintVertical_bias="0.13999999"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/rightAnswersResultsFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/placeholder_right_answers"
        android:textColor="@color/vanilla_white"
        android:textSize="29sp"
        app:layout_constraintBottom_toTopOf="@+id/notAnsweredResultsFrag"
        app:layout_constraintStart_toStartOf="@+id/notAnsweredResultsFrag"
        app:layout_constraintTop_toBottomOf="@+id/wrongAnswersResultsFrag" />

    <TextView
        android:id="@+id/notAnsweredResultsFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/placeholder_not_answered"
        android:textColor="@color/vanilla_white"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rightAnswersResultsFrag" />

    <LinearLayout
        android:id="@+id/homeButtonResulsFrag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iconPreviousResultsFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cont_desc_nav_to_signup"
            android:src="@drawable/ic_point_arrow_left" />

        <TextView
            android:id="@+id/textHomeResultsFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:includeFontPadding="false"
            android:text="@string/text_home"
            android:textColor="@color/gold_yellow"
            android:textSize="15sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>